# niff-replication

./: .gitignore  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
niff/: __init__.py  duffing_s51.py  fields.py  npsgld.py  nsvi.py  twodof_s52.py  utils.py
notes/: lab.md
scripts/: plot_duffing_s51.py  plot_twodof_s52.py  run_duffing_s51.py  run_twodof_s52.py
