[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "niff-replication"
version = "0.1.0"
description = "Reimplementation of Hao & Bilionis, Neural Information Field Filter (MSSP 2025)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jax", "numpy", "optax", "matplotlib"]

[tool.setuptools.packages.find]
include = ["niff*"]
